a lot more changes namely PlotBot and Bot.Markup